increased PermSize and mx memory limits for test case execution